# yolosmart

./: .envrc  .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
devices/temp-sensor/: Cargo.toml  build.rs
