[package]
name = "temp-sensor"
version = "0.1.0"
edition.workspace = true

[lib]
test = false
doctest = false
bench = false

[[bin]]
name = "temp-sensor"
path = "./src/bin/main.rs"
test = false
doctest = false
bench = false

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32c6", "unstable"] }

esp-rtos = { version = "0.2.0", features = ["embassy", "esp32c6"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }

esp-println = { version = "0.16.1", features = ["esp32c6"] }

embassy-executor = { version = "0.9.1", features = [] }
embassy-time     = "0.5.0"

critical-section = "1.2.0"
static_cell      = "2.1.1"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
